secound-commit-project-ui

--- a/login.html
+++ b/login.html
@@ -45,12 +45,12 @@
                 </div>
 
                 <div class="font-inter w-16 mt-24 cursor-pointer hover:text-gray-400">
-                    <button class="bg-gray-500 w-[380px] py-3 rounded-full text-white ">Login</button>
+                    <button id="sbtn" class="bg-gray-300 w-[380px] py-3 rounded-full text-white">Login</button>
                 </div>
             </form>
         </div>
     </div>
-    <script src="scripts/controls.js"></script>
+    <script src="/scripts/controls.js"></script>
     <script type="module" src="/main.js"></script>
 </body>
 </html>
