--- a/signup.html
+++ b/signup.html
@@ -45,7 +45,7 @@
                 </div>
 
                 <div class="font-inter w-16 mt-24 cursor-pointer hover:text-gray-400">
-                    <button class="bg-gray-500 w-[380px] py-3 rounded-full text-white">Sign up</button>
+                    <button id="sbtn" class="bg-gray-300 w-[380px] py-3 rounded-full text-white">Sign up</button>
                 </div>
             </form>
         </div>
