--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
      </div>  
      
      <script src="https://cdn.jsdelivr.net/npm/swiper@8.2.2/swiper-bundle.min.js"></script>  
+     <script src="scripts/index.js"></script>
      <script src="scripts/controls.js"></script>
     <script type="module" src="/main.js"></script>
   </body>
