third-commit-project-ui

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
       <div class="my-14 swiper-pagination"></div>  
      
       <!-- Add Navigation -->  
-      <div class="swiper-button-prev"></div>  
-      <div class="swiper-button-next"></div>  
+      <div class=""></div>  
+      <div class=""></div>  
      </div>  
      
      <script src="https://cdn.jsdelivr.net/npm/swiper@8.2.2/swiper-bundle.min.js"></script>  
