--- a/signup.html
+++ b/signup.html
@@ -23,13 +23,13 @@
             <h1 class="text-3xl font-bold font-inter ">Signup to Your Account</h1>
         </div>
         <div class="mt-[-170px]">
-            <form class="max-w-sm mx-auto ">
+            <form id="signup"  class="max-w-sm mx-auto">
                 <label for="username" class="block mb-2 text-sm font-medium text-gray-200 dark:text-white">Username</label>
                 <div class="relative">
                 <div class="absolute inset-y-0 start-0 flex items-center ps-3.5 pointer-events-none">
                     <i class="fas fa-bag-shopping"></i>
                 </div>
-                <input type="text" id="username" class="bg-gray-50 border border-gray-300 text-gray-800 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5  dark:bg-gray-100 dark:border-gray-200 dark:placeholder-gray-400 dark:text-black dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="name@flowbite.com">
+                <input type="text" id="username" name="username" class="bg-gray-50 border border-gray-300 text-gray-800 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5  dark:bg-gray-100 dark:border-gray-200 dark:placeholder-gray-400 dark:text-black dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="name@flowbite.com" >
                 </div>
                 <label for="password" class="block mb-2 text-sm font-medium text-gray-200 dark:text-white">Password</label>
                 <div class="relative">
@@ -37,7 +37,7 @@
                         <i class="fas fa-lock"></i>
                     </div>
                     <i id="eyes" class="fas fa-eye-slash absolute right-2 top-[13px]" onclick="Eyecontrolpass()"></i>
-                    <input type="password" id="password" class="bg-gray-50 border border-gray-300 text-gray-800 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5  dark:bg-gray-100 dark:border-gray-200 dark:placeholder-gray-400 dark:text-black dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="name@flowbite.com">
+                    <input type="password" id="password" name="password" class="bg-gray-50 border border-gray-300 text-gray-800 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5  dark:bg-gray-100 dark:border-gray-200 dark:placeholder-gray-400 dark:text-black dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Enter Password" >
                 </div>
 
                 <div class="font-inter w-20 mx-auto mt-6 cursor-pointer hover:text-gray-400">
@@ -45,12 +45,13 @@
                 </div>
 
                 <div class="font-inter w-16 mt-24 cursor-pointer hover:text-gray-400">
-                    <button id="sbtn" class="bg-gray-300 w-[380px] py-3 rounded-full text-white">Sign up</button>
+                    <button type="submit" id="sbtn" class="bg-gray-300 w-[380px] py-3 rounded-full text-white">Sign up</button>
                 </div>
             </form>
         </div>
     </div>
     <script src="scripts/controls.js"></script>
+    <script defer type="module" src="/scripts/signup.js"></script>
     <script type="module" src="/main.js"></script>
 </body>
 </html>
