--- a/signup.html
+++ b/signup.html
@@ -37,7 +37,7 @@
                         <i class="fas fa-lock"></i>
                     </div>
                     <i id="eyes" class="fas fa-eye-slash absolute right-2 top-[13px]" onclick="Eyecontrolpass()"></i>
-                    <input type="password" id="password" name="password" class="bg-gray-50 border border-gray-300 text-gray-800 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5  dark:bg-gray-100 dark:border-gray-200 dark:placeholder-gray-400 dark:text-black dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Enter Password" >
+                    <input type="password" id="password" name="password" class="bg-gray-50 border border-gray-300 text-gray-800 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5  dark:bg-gray-100 dark:border-gray-200 dark:placeholder-gray-400 dark:text-black dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Enter your Password" autocomplete="on">
                 </div>
 
                 <div class="font-inter w-20 mx-auto mt-6 cursor-pointer hover:text-gray-400">
