ninety-commit-project-ui

--- a/home.html
+++ b/home.html
@@ -12,8 +12,8 @@
                 <!-- Header -->  
         <header class="w-full flex justify-between items-center p-4">  
           <div>
-              <p class="text-lg w-full">Good Morning 👋</p>  
-              <p class="text-lg w-full font-semibold ">Saeed Abdilar</p>
+              <p class="text-lg w-full" id="greeting">Good Morning 👋</p>  
+              <p class="text-lg w-full font-semibold " id="username"></p>
           </div>  
         <div class="flex space-x-2">  
           <div><i class="fa fa-bell-o text-2xl cursor-pointer"></i></div>  
@@ -87,6 +87,7 @@
       </footer>
     </div>
    <script src="/scripts/controls.js"></script>
-    <script type="module" src="/main.js"></script>
+   <script defer type="module" src="/scripts/dashboard.js"></script>
+    <script defer type="module" src="/main.js"></script>
 </body>
 </html>
