--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
 <body class="h-screen flex flex-col font-inter">  
     <div class="w-full overflow-auto">
                 <!-- Header -->  
-        <header class="w-full flex justify-between items-center p-4">  
+        <header class="w-full flex justify-between items-center p-4 mx-auto">  
           <div>
               <p class="text-lg w-full" id="greeting">Good Morning 👋</p>  
               <p class="text-lg w-full font-semibold " id="username"></p>
@@ -21,18 +21,18 @@
         </div> 
       </header>  
 
-      <div class="w-full px-8 relative">
-      <i class="fas fa-search opacity-60 absolute top-2 text-xl left-10 cursor-pointer" ></i>
+      <div class="w-full px-8 relative mx-auto">
+      <i class="fas fa-search opacity-60 absolute top-2 text-xl left-10 cursor-pointer " ></i>
       <input type="text" id="text" class="bg-gray-50 border px-8 border-gray-300 text-gray-800 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5  dark:bg-gray-100 dark:border-gray-200 dark:placeholder-gray-400 dark:text-black dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Search">  
       </div> 
 
       <!-- Filter buttons -->  
-      <div class="w-full grid grid-cols-2 justify-center items-center"> 
+      <div class="w-full grid grid-cols-2 justify-center items-center mx-auto"> 
       <h1 class="flex flex-nowrap justify-start items-start pl-6 font-bold text-2xl">Most Popular</h1> 
       <h1 class="flex flex-nowrap justify-end items-end pr-6 font-semibold text-xl py-4">See All</h1>
       </div>
 
-      <section class="w-full flex space-x-2 p-4 ml-2 overflow-x-auto scrollbar-hide pb-10">  
+      <section class="w-12/12 flex space-x-2 p-4 ml-2 overflow-x-auto scrollbar-hide pb-10">  
       <button class="w-20 h-10 bg-[#343a40] text-white rounded-full py-2 px-4 border-2">All</button>  
       <button class="w-16 h-10 bg-white rounded-full py-2 px-4 border-2">Nike</button>  
       <button class="w-20 h-10 bg-white rounded-full py-2 px-4 border-2">Adidas</button>  
@@ -42,18 +42,16 @@
       <button class="w-16 h-10 bg-white rounded-full py-2 px-4 border-2">Asi</button>  
       </section>
 
-      <!-- Sneaker grid -->  
-      <section class="grid grid-cols-2 gap-4 pt-2 mx-8">  
-        <div class="flex flex-col mt-4">  
-          <img src="public/sneaker 1.png" alt="Sneaker 1" class="w-48 h-48 mb-3">  
+      <div id="p-container" >
+       <section class="grid grid-cols-2 gap-4 pt-0 mx-8" id="p-Elemnet">  
+          <!-- <img src="public/sneaker 1.png" alt="Sneaker 1" class="w-48 h-48 mb-3">  
           <p class="text-lg font-bold">K-Swiss Ista Train...</p>  
-          <p class="text-lg justify-start items-start font-semibold">$85.00</p>  
-        </div>  
-        <div class="flex flex-col  mt-4">  
-          <img src="public/sneaker 2.png" alt="Sneaker 2" class="w-48 h-48 mb-3">  
+          <p class="text-lg justify-start items-start font-semibold">$85.00</p>   -->  
+        <!-- <div class="flex flex-col  mt-4">   -->
+          <!-- <img src="public/sneaker 2.png" alt="Sneaker 2" class="w-48 h-48 mb-3">  
           <p class="text-lg font-bold">K-Swiss Ista Train...</p>  
-          <p class="text-lg justify-start items-start font-semibold">$85.00</p>    
-        </div>  
+          <p class="text-lg justify-start items-start font-semibold">$85.00</p>     -->
+        <!-- </div>  
         <div class="flex flex-col mt-4">  
           <img src="public/sneaker 3.png" alt="Sneaker 3" class="w-48 h-48 mb-3">  
           <p class="text-lg font-bold">K-Swiss Ista Train...</p>  
@@ -73,11 +71,12 @@
           <img src="public/sneaker 6.png" alt="Sneaker 6" class="w-48 h-48 mb-3">  
           <p class="text-lg font-bold">K-Swiss Ista Train...</p>  
           <p class="text-lg justify-start items-start font-semibold">$85.00</p>   
-        </div>  
-      </section>  
+        </div>   -->
+      </section>   
+    </div>
 
       <!-- Footer navigation -->  
-      <footer class="w-full flex flex-wrap justify-center items-center bg-white p-4 ">  
+      <footer class="w-full flex flex-wrap justify-center items-center bg-white p-3">  
       <h3 class="w-full flex justify-center py-3 pb-8 font-bold ">Insert button based pagination here :D</h3>
       <div class="mx-4 cursor-pointer"><i class="fas fa-house-chimney ml-3"></i><p>Home</p></div>
       <div class="mx-4 cursor-pointer"><i class="fas fa-bag-shopping ml-2 text-gray-400"></i><p></p>Cart</div>
@@ -87,7 +86,10 @@
       </footer>
     </div>
    <script src="/scripts/controls.js"></script>
+   <script defer type="module" src="/components/sneaker-card.js"></script>
    <script defer type="module" src="/scripts/dashboard.js"></script>
     <script defer type="module" src="/main.js"></script>
 </body>
 </html>
+
+
