--- a/home.html
+++ b/home.html
@@ -72,12 +72,12 @@
           <p class="text-lg font-bold">K-Swiss Ista Train...</p>  
           <p class="text-lg justify-start items-start font-semibold">$85.00</p>   
         </div>   -->
-      </section>   
+      </section>  
+      <div id="pagination" class="flex justify-center items-center items-center"></div> 
     </div>
 
       <!-- Footer navigation -->  
-      <footer class="w-full flex flex-wrap justify-center items-center bg-white p-3">  
-      <h3 class="w-full flex justify-center py-3 pb-8 font-bold ">Insert button based pagination here :D</h3>
+      <footer class="w-full flex flex-wrap justify-center mt-6 py-6 pt-10 items-center bg-white  border-t-2">  
       <div class="mx-4 cursor-pointer"><i class="fas fa-house-chimney ml-3"></i><p>Home</p></div>
       <div class="mx-4 cursor-pointer"><i class="fas fa-bag-shopping ml-2 text-gray-400"></i><p></p>Cart</div>
       <div class="mx-4 cursor-pointer"><i class="fas fa-cart-shopping ml-3 text-gray-400"></i><p></p>Order</div>
