12th-commit-project-ui

--- a/home.html
+++ b/home.html
@@ -32,57 +32,29 @@
       <h1 class="flex flex-nowrap justify-end items-end pr-6 font-semibold text-xl py-4">See All</h1>
       </div>
 
-      <section class="w-12/12 flex space-x-2 p-4 ml-2 overflow-x-auto scrollbar-hide pb-10">  
+      <section class="w-12/12 flex space-x-2 p-4 ml-2 overflow-x-auto scrollbar-hide pb-10" id="brn">  
       <button class="w-20 h-10 bg-[#343a40] text-white rounded-full py-2 px-4 border-2">All</button>  
-      <button class="w-16 h-10 bg-white rounded-full py-2 px-4 border-2">Nike</button>  
+      <!-- <button class="w-16 h-10 bg-white rounded-full py-2 px-4 border-2">Nike</button>  
       <button class="w-20 h-10 bg-white rounded-full py-2 px-4 border-2">Adidas</button>  
       <button class="w-20 h-10 bg-white rounded-full py-2 px-4 border-2">Puma</button>  
       <button class="w-20 h-10 bg-white rounded-full py-2 px-4 border-2">Puma</button>  
       <button class="w-20 h-10 bg-white rounded-full py-2 px-4 border-2">Puma</button>  
-      <button class="w-16 h-10 bg-white rounded-full py-2 px-4 border-2">Asi</button>  
+      <button class="w-16 h-10 bg-white rounded-full py-2 px-4 border-2">Asi</button>   -->
       </section>
 
       <div id="p-container" >
        <section class="grid grid-cols-2 gap-4 pt-0 mx-8" id="p-Elemnet">  
-          <!-- <img src="public/sneaker 1.png" alt="Sneaker 1" class="w-48 h-48 mb-3">  
-          <p class="text-lg font-bold">K-Swiss Ista Train...</p>  
-          <p class="text-lg justify-start items-start font-semibold">$85.00</p>   -->  
-        <!-- <div class="flex flex-col  mt-4">   -->
-          <!-- <img src="public/sneaker 2.png" alt="Sneaker 2" class="w-48 h-48 mb-3">  
-          <p class="text-lg font-bold">K-Swiss Ista Train...</p>  
-          <p class="text-lg justify-start items-start font-semibold">$85.00</p>     -->
-        <!-- </div>  
-        <div class="flex flex-col mt-4">  
-          <img src="public/sneaker 3.png" alt="Sneaker 3" class="w-48 h-48 mb-3">  
-          <p class="text-lg font-bold">K-Swiss Ista Train...</p>  
-          <p class="text-lg justify-start items-start font-semibold">$85.00</p>   
-        </div>  
-        <div class="flex flex-col mt-4">  
-          <img src="public/sneaker 4.png" alt="Sneaker 4" class="w-48 h-48 mb-3">  
-          <p class="text-lg font-bold">K-Swiss Ista Train...</p>  
-          <p class="text-lg justify-start items-start font-semibold">$85.00</p>  
-        </div>  
-        <div class="flex flex-col mt-4">  
-          <img src="public/sneaker 5.png" alt="Sneaker 5" class="w-48 h-48 mb-3">  
-          <p class="text-lg font-bold">K-Swiss Ista Train...</p>  
-          <p class="text-lg justify-start items-start font-semibold">$85.00</p>    
-        </div>  
-        <div class="flex flex-col mt-4">  
-          <img src="public/sneaker 6.png" alt="Sneaker 6" class="w-48 h-48 mb-3">  
-          <p class="text-lg font-bold">K-Swiss Ista Train...</p>  
-          <p class="text-lg justify-start items-start font-semibold">$85.00</p>   
-        </div>   -->
       </section>  
-      <div id="pagination" class="flex justify-center items-center items-center"></div> 
+      <div id="pagination" class="flex justify-center mt-10"></div> 
     </div>
 
       <!-- Footer navigation -->  
-      <footer class="w-full flex flex-wrap justify-center mt-6 py-6 pt-10 items-center bg-white  border-t-2">  
+      <footer class="w-full flex flex-wrap justify-center mt-6 py-3 pt-10 items-center bg-white  border-t-2">  
       <div class="mx-4 cursor-pointer"><i class="fas fa-house-chimney ml-3"></i><p>Home</p></div>
       <div class="mx-4 cursor-pointer"><i class="fas fa-bag-shopping ml-2 text-gray-400"></i><p></p>Cart</div>
       <div class="mx-4 cursor-pointer"><i class="fas fa-cart-shopping ml-3 text-gray-400"></i><p></p>Order</div>
       <div class="mx-4 cursor-pointer"><i class="fas fa-wallet ml-3 text-gray-400"></i><p></p>Wallet</div>
-      <div class="mx-4 cursor-pointer"><i class="fas fa-user ml-4 text-gray-400"></i><p></p>Profile</div>
+      <div class="mx-4 w-5 cursor-pointer"><i class="fas fa-user ml-4 text-gray-400"></i><p></p>Profile</div>
       </footer>
     </div>
    <script src="/scripts/controls.js"></script>
