--- a/home.html
+++ b/home.html
@@ -22,12 +22,10 @@
       </header>  
 
       <div class="w-full px-8 relative mx-auto">
-        <form id="search-form" onsubmit="getSearchByProducts(query)">
           <input type="text" id="text-search" class="bg-gray-50 border px-8 border-gray-300 text-gray-800 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5  dark:bg-gray-100 dark:border-gray-200 dark:placeholder-gray-400 dark:text-black dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Search">  
           <button type="submit" class="fas fa-search opacity-60 absolute top-2 text-xl left-10 cursor-pointer " id="search-btn"></button>
-        </form>
       </div> 
-
+<div id="div-render-container">
       <!-- Filter buttons -->  
       <div class="w-full grid grid-cols-2 justify-center items-center mx-auto"> 
       <h1 class="flex flex-nowrap justify-start items-start pl-6 font-bold text-2xl">Most Popular</h1> 
@@ -49,7 +47,7 @@
       </section>  
       <div id="pagination" class="flex justify-center mt-10"></div> 
     </div>
-
+</div>    
       <!-- Footer navigation -->  
       <footer class="w-full flex flex-wrap justify-center mt-6 py-3 pt-10 items-center bg-white  border-t-2">  
       <div class="mx-4 cursor-pointer"><i class="fas fa-house-chimney ml-3"></i><p>Home</p></div>
@@ -60,6 +58,7 @@
       </footer>
     </div>
    <script src="/scripts/controls.js"></script>
+   <script defer type="module" src="/components/search-failed.js"></script>
    <script defer type="module" src="/scripts/search.js"></script>
    <script defer type="module" src="/components/brand-sneaker-card.js"></script>
    <script defer type="module" src="/components/sneaker-card.js"></script>
