16th-commit-project-ui

--- a/home.html
+++ b/home.html
@@ -33,7 +33,7 @@
       </div>
 
       <section class="w-12/12 flex space-x-2 p-4 ml-2 overflow-x-auto scrollbar-hide pb-10" id="brn">  
-      <button class="w-20 h-10 bg-[#343a40] text-white rounded-full py-2 px-4 border-2">All</button>  
+      <!-- <button class="w-20 h-10 bg-[#343a40] text-white rounded-full py-2 px-4 border-2 id" id="allbtn">All</button> -->
       <!-- <button class="w-16 h-10 bg-white rounded-full py-2 px-4 border-2">Nike</button>  
       <button class="w-20 h-10 bg-white rounded-full py-2 px-4 border-2">Adidas</button>  
       <button class="w-20 h-10 bg-white rounded-full py-2 px-4 border-2">Puma</button>  
