--- a/product-details.html
+++ b/product-details.html
@@ -18,14 +18,13 @@
   
       <!-- Product Image -->  
       <div class="flex justify-center">  
-        <img src="product-image.png" alt="Product Image" class="w-full  object-cover rounded-lg">  
-        
+        <img src="" alt="Product Image" class="w-full  object-cover rounded-lg" id="Productimg">  
       </div>  
   
       <!-- Product Information -->  
       <div class="px-4 py-2">  
        <div class="flex justify-between mt-4">
-        <h2 class="text-3xl font-bold">Running Sportwear</h2>  
+        <h2 class="text-3xl font-bold" id="Productname"></h2>  
         <i class="fa fa-heart-o text-2xl cursor-pointer"></i>
        </div>
         <div class="flex items-center py-2 border-b-2">  
@@ -40,19 +39,19 @@
   
       <!-- Size Options -->  
       <div class=" grid grid-cols-2 px-4 py-2">  
-        <h3 class="w-14 text-lg font-bold">Size</h3> 
-        <h3 class="w-16 text-lg font-bold">Color</h3>   
-        <div class="w-40 flex flex-wrap justify-start pt-2 ">  
-           <button class="bg-white border border-gray-300 rounded-full w-8 h-8 flex justify-center items-center mx-2 text-sm">40</button>  
+        <h3 class="w-14 text-lg font-bold" >Size</h3> 
+        <h3 class="w-16 text-lg font-bold" >Color</h3>   
+        <div class="w-40 flex flex-wrap justify-start pt-2 " id="Productcolor" >  
+           <!-- <button class="bg-white border border-gray-300 rounded-full w-8 h-8 flex justify-center items-center mx-2 text-sm">40</button>  
            <button class="bg-white border border-gray-300 rounded-full w-8 h-8 flex justify-center items-center mx-2 text-sm">41</button>  
-           <button class="bg-white border border-gray-300 rounded-full w-8 h-8 flex justify-center items-center mx-2 text-sm">42</button>  
+           <button class="bg-white border border-gray-300 rounded-full w-8 h-8 flex justify-center items-center mx-2 text-sm">42</button>   -->
         </div>  
         
-        <div class="w-52 flex flex-wrap justify-start pt-2">  
-           <button class="bg-teal-500 rounded-full w-8 h-8 mx-2"></button>  
+        <div class="w-52 flex flex-wrap justify-start pt-2" id="Productsize">  
+           <!-- <button class="bg-teal-500 rounded-full w-8 h-8 mx-2"></button>  
            <button class="bg-purple-500 rounded-full w-8 h-8 mx-2"></button>  
            <button class="bg-amber-900 rounded-full w-8 h-8 mx-2"></button>  
-           <button class="bg-blue-500 rounded-full w-8 h-8 mx-2"></button>  
+           <button class="bg-blue-500 rounded-full w-8 h-8 mx-2"></button>   -->
         </div>  
       </div>  
   
@@ -79,7 +78,7 @@
           <div class="grid grid-cols-2 pb-10">
             <div class="w-24">
                 <p class="text-sm pb-1 opacity-50">Total price</p>
-                <h1 class="font-semibold text-2xl">$240.00</h1>
+                <h1 class="font-semibold text-2xl" id="Productprice"></h1>
             </div>
             <div class="w-full py-3 mx-auto ">
                 <button class=" w-full bg-black text-white rounded-full py-4 p-10">  
@@ -90,6 +89,7 @@
         </div>  
       </div>  
    </div>
+   <script type="module" src="/scripts/product-details.js"></script>
    <script src="scripts/controls.js"></script>
    <script type="module" src="/main.js"></script>
 </body>  
