24th-commit-project-ui

--- a/home.html
+++ b/home.html
@@ -13,7 +13,10 @@
         <header class="w-full flex justify-between items-center p-4 mx-auto">  
           <div>
               <p class="text-lg w-full" id="greeting">Good Morning 👋</p>  
-              <p class="text-lg w-full font-semibold " id="username"></p>
+             <div class="flex flex-nowrap">
+              <p class="text-lg w-full font-semibold mr-2" id="username"></p>|
+              <p class="w-full text-md font-semibold  hover:text-gray-400 cursor-pointer mt-[1px] ml-2" id="logout">  Log Out</p>
+             </div>   
           </div>  
         <div class="flex space-x-2">  
           <div><i class="fa fa-bell-o text-2xl cursor-pointer"></i></div>  
