25th-commit-project-ui

--- a/home.html
+++ b/home.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>  
+<!DOCTYPE html >  
 <html lang="en">  
 <head>  
    <meta charset="UTF-8">  
@@ -35,7 +35,7 @@
       <h1 class="flex flex-nowrap justify-end items-end pr-6 font-semibold text-xl py-4">See All</h1>
       </div>
 
-      <section class="w-12/12 flex space-x-2 p-4 ml-2 overflow-x-auto scrollbar-hide pb-10" id="brn">  
+      <section class="w-12/12 flex space-x-2 p-4 ml-2 overflow-x-scroll scrollbar-hide pb-10 " id="brn">  
       </section>
 
       <div id="p-container" >
@@ -45,12 +45,12 @@
     </div>
 </div>    
       <!-- Footer navigation -->  
-      <footer class="w-full flex flex-wrap justify-center mt-6 py-3 pt-10 items-center bg-white  border-t-2">  
-      <div class="mx-4 cursor-pointer"><i class="fas fa-house-chimney ml-3"></i><p>Home</p></div>
-      <div class="mx-4 cursor-pointer"><i class="fas fa-bag-shopping ml-2 text-gray-400"></i><p></p>Cart</div>
-      <div class="mx-4 cursor-pointer"><i class="fas fa-cart-shopping ml-3 text-gray-400"></i><p></p>Order</div>
-      <div class="mx-4 cursor-pointer"><i class="fas fa-wallet ml-3 text-gray-400"></i><p></p>Wallet</div>
-      <div class="mx-4 w-5 cursor-pointer"><i class="fas fa-user ml-4 text-gray-400"></i><p></p>Profile</div>
+      <footer class="w-full flex flex-wrap justify-center mt-6 py-3 pt-10 items-center bg-white border-t-2 overflow-hidden">  
+      <div class="mx-3 cursor-pointer"><i class="fas fa-house-chimney ml-3"></i><p>Home</p></div>
+      <div class="mx-3 cursor-pointer"><i class="fas fa-bag-shopping ml-2 text-gray-400"></i><p></p>Cart</div>
+      <div class="mx-3 cursor-pointer"><i class="fas fa-cart-shopping ml-3 text-gray-400"></i><p></p>Order</div>
+      <div class="mx-3 cursor-pointer"><i class="fas fa-wallet ml-3 text-gray-400"></i><p></p>Wallet</div>
+      <div class="mx-3 w-5  ml-2 cursor-pointer"><i class="fas fa-user ml-4 text-gray-400"></i><p></p>Profile</div>
       </footer>
     </div>
    <script src="/scripts/controls.js"></script>
